; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_server.c_do_TCP_incomming.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_server.c_do_TCP_incomming.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_INCOMMING_CONNECTIONS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @do_TCP_incomming to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_TCP_incomming(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %12, %1
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @MAX_INCOMMING_CONNECTIONS, align 8
  %7 = icmp slt i64 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %4
  %9 = load i32*, i32** %2, align 8
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @do_incoming(i32* %9, i64 %10)
  br label %12

12:                                               ; preds = %8
  %13 = load i64, i64* %3, align 8
  %14 = add nsw i64 %13, 1
  store i64 %14, i64* %3, align 8
  br label %4

15:                                               ; preds = %4
  ret void
}

declare dso_local i32 @do_incoming(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
